# github-pre-commit

./: .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  test.py  test.sh
.github/workflows/: test.yml
hook/: __init__.py  __main__.py  main.py
